--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "my-app",
+  "name": "shop",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://c-healey.github.io/shopping-cart",
   "dependencies": {
+    "@google-pay/button-react": "^2.1.4",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.1.22",
     "react-scripts": "4.0.0",
+    "reactstrap": "^8.7.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
